# ExpectedSarsaAgent_with_NeuralNetwork-LunarLander-v3

./: README.md  main.py  pyproject.toml
configs/: demo_parameters.json  parameters.json  parameters.txt
data/results/: sum_reward_expected_sarsa_agent.npy  sum_reward_expected_sarsa_agent_1200.npy  sum_reward_expected_sarsa_agent_1750.npy  sum_reward_expected_sarsa_agent_2000.npy  weights_expected_sarsa_agent.npy  weights_expected_sarsa_agent_1750.npy
data/weights/: weights_expected_sarsa_agent.npy
docs/: A4 - Lunar Lander.fig
scripts/: check_weights.py  convert_to_gif.py  video.py  viz_plot_script.py  viz_video_agent.py
src/: main.py
src/agents/: base_agent.py  expected_sarsa_agent.py
src/agents/archive/: first_sum_reward_expected_sarsa_agent.npy  sum_reward_expected_sarsa_agent_600.npy
src/environments/: lunar_lander.py
src/models/: network.py  replay_buffer.py
src/utils/: optimizer.py  rl_glue.py  softmax.py
